# native_add_flutter

./: pubspec.yaml
android/: CMakeLists.txt  build.gradle
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/br/fpf/tva/poc/iperf/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/assets/: foo.txt  iperf_bundle
example/lib/: main.dart
example/test/: widget_test.dart
ios/Classes/: Makefile  exit_hack.c  exit_hack.h  iperf_api.h  iperf_auth.c  iperf_config.h  main.c  native_add.cpp
lib/: native_add.dart  read-forever.dart
test/: native_add_test.dart
